# cmake-cxx-cuda-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
exec/: CMakeLists.txt  exec.cc
foobar/: foobar.cc  foobar.h
test/: CMakeLists.txt  foobar_test.cc  simple_test.cc
